DevTools: fix crash on intercepting request that posts a blob

Bug: 782545
Change-Id: Id4ba197b95c4caa82710ee176d072515b6ff00bc
Reviewed-on: https://chromium-review.googlesource.com/759298
Reviewed-by: Andrey Lushnikov <lushnikov@chromium.org>
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Andrey Lushnikov <lushnikov@chromium.org>
Cr-Commit-Position: refs/heads/master@{#515281}