third_party/WebKit/LayoutTests/http/tests/inspector-protocol/network/request-interception-post-blob.js
@@ -1,0 +1,20 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+(async function(testRunner) {
+  var {page, session, dp} = await testRunner.startBlank(
+      `Tests the browser does not crash while intercepting a request where blob is posted (crbug.com/782545)`);
+
+  session.protocol.Network.enable();
+  session.protocol.Page.enable();
+
+  session.protocol.Network.onRequestIntercepted(event => {
+    session.protocol.Network.continueInterceptedRequest({interceptionId: event.params.interceptionId});
+  });
+  await session.protocol.Network.setRequestInterception({patterns: [{urlPattern: "*"}]});
+
+  await session.evaluateAsync(`(function() {
+    var blob = new Blob(['data']);
+    var url = '${testRunner.url('./resources/post-echo.pl')}';
+    return fetch(new Request(url, {method: 'POST', body: blob}));
+  })()`);
+  testRunner.completeTest();
+})
